css/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    background-color: white;
    color: white;
    margin:0;
    padding: 0;
}

#bg {
    position: fixed;
    top: 0;
    left: 0;
    height: 130%;
    width: 100%;
    z-index: -3;
    overflow: hidden;
    animation-name: enter;
    animation-duration: 0.3s;
}
#bg:after {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    height: 110%;
    width: 100%;
    display: block;
    background: linear-gradient(to right, rgba(0, 0, 0, .7) 0%, rgba(19, 19, 19, 0) 100%);
}

#bg img {
    min-height: 100%;
    min-width: 100%;
    display: block;
    position: relative;

}

h1 {
    text-shadow: 0 0 10px rgba(0,0,0,0.5);
    font-size: 70px;
    margin-bottom: 100px;
    font-weight: 800;
}
h1, h2 {
    text-transform: uppercase;
}
h2 {
  font-size:45px;
  color: white;
}
h3 {
    margin: 0;
    padding: 0;
    font-size: 35px;
    font-weight: 600;
}

a {
    color: inherit;
    text-decoration: none;
}
a:hover {
    text-decoration: underline;

}
p {
    margin: 0;
    padding: 0;
    transition: color 0.1s;
}

p a {
    color: inherit;
    text-decoration: none;
    transition: color 0.1s;
}
p a:hover {
    text-decoration: underline;
}

h1 > a, h2 > a, h3 > a {
    color: inherit;
    text-decoration: none;
    transition: color 0.1s;
}

h1 > a:hover, h2 > a:hover, h3 > a:hover {
    color: #ccc;
    text-decoration: none;
}


#sidebar {
    float: left;
    width: 20%;
    padding: 5px;
    height: 250%;
    position: fixed;
    font-size: 30px;
    opacity: 0.7;
    transition: opacity 0.2s;
}

#sidebar:hover {
    opacity: 1;
}

#sidebar ul {
    padding: 0;
    margin: 0;
    position: absolute;
    top: 15%;
    width: 100%;
    font-weight: 500;
}

#sidebar li {
    list-style: none;
}

#sidebar li a {
    color: white;
    text-decoration: none;
    display: block;
    padding: 10px;
    transition: background-color 0.1s;
}

#sidebar li a:hover, #sidebar li.current a {
    background-color: #ad6a26;
}

#sidebar li a:active {
    background-color: #a06628;
}

.container {
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
}

.content {
    float: right;
    width: 80%;
    padding: 30px;
    color: white;
}

.card {
    background-color: rgba(0,0,0,0.7);
    position: relative;
    animation-name: enter;
    animation-duration: 0.65s;
    animation-timing-function: cubic-bezier(.68,.35,.36,.99);
}

.card:nth-child(1) {animation-duration: 0.3s;}
.card:nth-child(2) {animation-duration: 0.45s;}
.card:nth-child(3) {animation-duration: 0.6s;}


.fact.card p {
    margin: 0;
    padding: 0;
    font-size: 35px;
    font-weight: 600;
}

.fact.card, .story.card {
    margin-bottom: 70px;
    padding: 20px;
    max-width: 700px;
}

.story .link {
    margin-top: 10px;
    text-transform: lowercase;
    font-weight: lighter;
    font-size: 0.9em;
}

.main .container {
    flex-direction: column;
}
.main .fact.card:nth-child(even) {
    align-self: flex-end;
}

.card p {
    font-size: 20px;
    margin-bottom: 10px;
}

.card.story {
    max-width: 100%;
}

.stories h3 {
    font-size: 30px;
}

.story img {
    float: left;
    vertical-align: bottom;
    margin: 8px 10px 5px 5px;
}

.get_involved h3 {
    font-size: 25px;
    text-transform: none;
    text-align: center;
}

.org.card {
    height: 370px;
    width: 300px;
    margin: 15px;
    padding: 10px;
    position: relative;
    top: 0;
    transition: top 0.2s;
}

.org.card:hover {
    top: -10px;
    text-decoration: none;
}

.org.card:hover h3 {
    color: #ccc;
}

.org.card p {
    font-size: 16px;
    padding: 15px;
}

.org.card .logo {
    margin-bottom: 10px;
    height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.org.card .logo img {
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin: auto;
}

@media (max-width: 700px) {
    #bg img {
        left: -30%;
    }
    h1 {
        margin-top: 10px;
        margin-bottom: 100px;
        font-size: 30px;
        text-align: center;
    }

    h3 {
        font-size: 25px;
    }

    .card p {
        font-size: 12px;
    }

    .main .fact.card {
      align-self: center;
    }

    .stories h3 {
        font-size: 18px;
    }

    #sidebar {
        width: 100%;
        position: static;
        height: auto;
        padding: 0;
        opacity: 1;
    }
    #sidebar ul {
        position: static;
        display: flex;
        justify-content: space-between;
        font-size: 15px;
        width: 100%;
    }
    #sidebar li {
        display: inline-block;
    }
    .container {
      justify-content: center;
    }

    .content {
        width: 100%;
    }

    .card.org {
        height: auto;
    }
}

@keyframes enter {
    from {
        transform: translateY(500px);
        opacity: 0;
        color: transparent;
    }
    to {
        transform: translateY(0);
        opacity: 1;
        color: white;
    }
}

